--- a/EasyWinModernControl/EasyWinModernControl.vcxproj
+++ b/EasyWinModernControl/EasyWinModernControl.vcxproj
@@ -154,6 +154,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CModernButton.cpp" />
+    <ClCompile Include="CModernCheckbox.cpp" />
     <ClCompile Include="CModernControl.cpp" />
     <ClCompile Include="CModernCalendarDatePicker.cpp" />
     <ClCompile Include="CModernHyperlink.cpp" />
@@ -178,6 +179,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CModernButton.h" />
+    <ClInclude Include="CModernCheckbox.h" />
     <ClInclude Include="CModernControl.h" />
     <ClInclude Include="CModernCalendarDatePicker.h" />
     <ClInclude Include="CModernHyperlink.h" />
