--- a/EasyWinModernControl/EasyWinModernControl.vcxproj.filters
+++ b/EasyWinModernControl/EasyWinModernControl.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="CModernSwitch.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="CModernCheckbox.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -108,6 +111,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="CModernSwitch.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CModernCheckbox.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
